--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=AutoAnalogAudio
-version=1.1
+version=1.2
 author=TMRh20
 maintainer=TMRh20
 sentence=Automated analog reads and analog output (streaming) using Arduino Due DAC, ADC and Timers
-paragraph=Plays and records analog (wav/pcm audio) data using onboard DAC and ADC. Timers are adjusted automatically based on the rate of data delivery, to ensure smooth playback.DMA transfers used to maximize efficiency.
+paragraph=Simplified API for Arduino Due DAC, ADC, Timers & DMA, designed with radio & wireless communication in mind. Easily create a wide variety of audio related applications.
 category=Signal Input/Output
 url=https://github.com/TMRh20/AutoAnalogAudio
 architectures=sam
