--- a/library.properties
+++ b/library.properties
@@ -2,8 +2,8 @@ name=AutoAnalogAudio
 version=1.2
 author=TMRh20
 maintainer=TMRh20
-sentence=Automated analog reads and analog output (streaming) using Arduino Due DAC, ADC and Timers
-paragraph=Simplified API for Arduino Due DAC, ADC, Timers & DMA, designed with radio & wireless communication in mind. Easily create a wide variety of audio related applications.
+sentence=Automated analog reads and analog output (streaming) using Arduino DAC(or PWM), ADC, DMA and Timers
+paragraph=Simplified API for Arduino DAC, ADC, Timers & DMA, designed with radio & wireless communication in mind. Easily create a wide variety of audio related applications.
 category=Signal Input/Output
 url=https://github.com/TMRh20/AutoAnalogAudio
-architectures=sam
+architectures=avr,sam
