Update architectures and platforms

--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,4 @@ sentence=Automated analog reads and analog output (streaming) using Arduino DAC(
 paragraph=Simplified API for Arduino DAC, ADC, Timers & DMA, designed with radio & wireless communication in mind. Easily create a wide variety of audio related applications.
 category=Signal Input/Output
 url=https://github.com/TMRh20/AutoAnalogAudio
-architectures=avr,sam
+architectures=avr,sam,esp32
